[gd_scene load_steps=30 format=3 uid="uid://bku4akkrwirnp"]

[ext_resource type="Script" path="res://player.gd" id="1_fdhjf"]
[ext_resource type="Texture2D" uid="uid://du1o1k6sd6tf7" path="res://PlayerSprite.png" id="2_j60li"]
[ext_resource type="Texture2D" uid="uid://3ywngbn58h1y" path="res://PlayerIdle.png" id="3_rrhgw"]
[ext_resource type="Texture2D" uid="uid://yetffl3g6my0" path="res://PlayerWindSpell2.png" id="4_nndr7"]
[ext_resource type="Texture2D" uid="uid://cnalonkqk2pit" path="res://PlayerWalk.png" id="4_opkg8"]
[ext_resource type="Texture2D" uid="uid://b5q8w3n86kjg6" path="res://Herdorbbig.png" id="6_rtp63"]
[ext_resource type="Texture2D" uid="uid://crmqt5tdi3b0v" path="res://Herdorbsmall.png" id="7_0pfxo"]
[ext_resource type="AudioStream" uid="uid://sxl1sf41k12g" path="res://fast-whoosh-118248.mp3" id="8_0el6c"]
[ext_resource type="AudioStream" uid="uid://d1tyr3sthoeg6" path="res://concrete-footsteps-6752.mp3" id="9_c2qr0"]
[ext_resource type="Texture2D" uid="uid://cdcbl1sqkhht2" path="res://DustPartical.png" id="10_bo45k"]
[ext_resource type="Texture2D" uid="uid://cued56v3panlq" path="res://WindParticles.png" id="11_2jyiv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4m2ut"]
atlas = ExtResource("3_rrhgw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgekg"]
atlas = ExtResource("3_rrhgw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq2se"]
atlas = ExtResource("4_nndr7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdr63"]
atlas = ExtResource("4_nndr7")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnurv"]
atlas = ExtResource("4_nndr7")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlfqg"]
atlas = ExtResource("4_opkg8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nagh"]
atlas = ExtResource("4_opkg8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5ddk"]
atlas = ExtResource("4_opkg8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5mw7x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j60li")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m2ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgekg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq2se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdr63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnurv")
}],
"loop": false,
"name": &"spell",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nagh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5ddk")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j65q3"]
size = Vector2(6, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_ye66l"]
radius = 55.0

[sub_resource type="AtlasTexture" id="AtlasTexture_g5tta"]
atlas = ExtResource("6_rtp63")
region = Rect2(0, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sc1y"]
atlas = ExtResource("6_rtp63")
region = Rect2(120, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_kclm8"]
atlas = ExtResource("7_0pfxo")
region = Rect2(0, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_05nk0"]
atlas = ExtResource("7_0pfxo")
region = Rect2(120, 0, 120, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyce1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5tta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sc1y")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kclm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05nk0")
}],
"loop": true,
"name": &"idle_small",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ldee4"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1g8qv"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(0, -7)
collision_mask = 8
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 0.0
floor_snap_length = 0.0
script = ExtResource("1_fdhjf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
sprite_frames = SubResource("SpriteFrames_5mw7x")
animation = &"spell"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j65q3")

[node name="NoiseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoiseArea"]
shape = SubResource("CircleShape2D_ye66l")

[node name="CircleAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fyce1")
animation = &"idle_small"

[node name="SpellSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_0el6c")
volume_db = -9.558
pitch_scale = 0.95
max_polyphony = 3

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_c2qr0")
volume_db = -9.369
pitch_scale = 0.99

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_ldee4")
position = Vector2(0, 6)
rotation = -1.57079
emitting = false
amount = 10
lifetime = 0.3
texture = ExtResource("10_bo45k")
emission_shape = 3
emission_rect_extents = Vector2(0, 5)
gravity = Vector2(0, 0)
initial_velocity_max = 4.0
angular_velocity_min = -174.55
angular_velocity_max = 43.64
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="WindSPellParticles" type="CPUParticles2D" parent="."]
z_index = 14
material = SubResource("CanvasItemMaterial_1g8qv")
emitting = false
amount = 1000
lifetime = 0.6
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
texture = ExtResource("11_2jyiv")
emission_shape = 1
emission_sphere_radius = 10.05
gravity = Vector2(0, 0)
linear_accel_min = 100.0
linear_accel_max = 100.0
radial_accel_min = 73.53
radial_accel_max = 73.53
scale_amount_min = 0.5
color = Color(0.972549, 0.972549, 0.972549, 0.741176)
anim_speed_min = 1.0
anim_speed_max = 1.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="NoiseArea" to="." method="_on_noise_area_body_entered"]
[connection signal="body_exited" from="NoiseArea" to="." method="_on_noise_area_body_exited"]
